--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,34 @@
-clipboard
-gradio
-nltk
-openai
-PyAutoGUI
-pygame
-pyjokes
-pyttsx3
-pywhatkit
-requests
+aiohttp==3.9.0
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+clipboard==0.0.4
+edge-tts==7.2.3
+gradio==3.50.2
+idna==3.4
+mediawiki==1.0.1
+nltk==3.8.1
+numpy==1.26.0
+openai==1.3.5
+pandas==2.1.1
+PyAutoGUI==0.9.54
+pygame==2.5.2
+pyjokes==1.0.0
+pymediawiki==0.9.12
+pynput==1.7.6
+pyperclip==1.8.2
+pyscreeze==1.0.0
+pytesseract==0.3.10
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pyttsx3==2.90
+pywhatkit==5.4
+requests==2.31.0
+six==1.16.0
+soupsieve==2.5
+tabulate==0.9.0
+tqdm==4.66.1
+typing-extensions==4.8.0
+urllib3==2.0.7
+wikipedia-api==0.6.0
+wikipedia==1.4.0
